# aist-tsn-switch

./: .gitignore  .gitmodules  LICENSE  README.md  build_device.sh  clean_corrupt.sh  clean_corrupt.sh.bak
cmake/: FindHLS.cmake  (+4 more)
device/: CMakeLists.txt  README.md
device/constraints/: zedboard.xdc
device/ip/: README.md
device/ip/ats/connect_frame_length/: component.xml  component.xml.bak  connect_frame_length.v
device/ip/ats/connect_frame_length/xgui/: connect_frame_length_v1_0.tcl
device/ip/ats/connect_timestamp/: component.xml  connect_timestamp.v  set_timestamp.v
device/ip/ats/connect_timestamp/xgui/: connect_timestamp_v1_0.tcl
device/ip/ats/detect_flow/: axi4_lite_slave.v  component.xml  component.xml.bak  detect_flow.v
device/ip/ats/detect_flow/xgui/: detect_flow_v1_0.tcl  detect_flow_v1_0.tcl.bak
device/ip/ats/et_arbiter/: component.xml
device/ip/ats/et_arbiter/gui/: et_arbiter_v1_0.gtcl
device/ip/ats/et_arbiter/xgui/: et_arbiter_v1_0.tcl
device/ip/ats/et_checker/: component.xml  et_checker.v
device/ip/ats/et_checker/xgui/: et_checker_v1_0.tcl
device/ip/ats/et_deadline/: component.xml
device/ip/ats/et_deadline/gui/: et_deadline_v1_0.gtcl
device/ip/ats/et_gate/: component.xml  et_gate.v
device/ip/ats/get_frame_length/: component.xml  get_frame_length.v
device/ip/ats/gpio_processing_delay_max/: component.xml  gpio_processing_delay_max.v
device/ip/ats/process_frame/: component.xml  component.xml.bak  process_frame.v
device/ip/ats/reference_timer/: component.xml  reference_timer.v
device/ip/ats/separate_timestamp/: component.xml  separate_timestamp.v
device/ip/ats/set_timestamp/: component.xml  set_timestamp.v
device/ip/cbs/add_tdest_from_vlan_tag/: add_tdest_from_vlan_tag.v  component.xml
device/ip/cbs/axis_stream_detector/: component.xml
device/ip/cbs/channel_in_opt/: component.xml
device/ip/cbs/credit_based_shaper/: component.xml  component.xml.bak  credit_based_shaper.v
device/ip/cbs/dest_to_user/: component.xml  dest_to_user.v
device/ip/cbs/ethernet_frame_arbiter/: component.xml  component.xml.bak  ethernet_frame_arbiter.v
device/ip/cbs/ethernet_frame_dropper/: component.xml  ethernet_frame_dropper.v
device/ip/cbs/extract_output_side_ready/: component.xml  component.xml.bak  extract_output_side_ready.v
device/ip/cbs/pulse_generator/: component.xml
device/ip/cbs/register_slice/: component.xml  register_slice.v
device/ip/cbs/user_to_dest/: component.xml  user_to_dest.v
device/ip/util/axi_gpio_parameters/: component.xml
device/rtl/: CMakeLists.txt
device/rtl/src/: .gitignore  channel_in_mod.v.patch  channel_in_mod.v.patch.bak  kc705_hpc.xdc.patch  mactable_dpcam_mod.v.patch  mactable_mod.v.patch  patch.sh  rgmii-0123.xdc.patch  tri_mode_ethernet_mac_0_axi_lite_sm_mod.v.patch  tri_mode_ethernet_mac_0_axi_lite_sm_mod.v.patch.bak  tri_mode_ethernet_mac_0_example_design_mod.v.patch  tri_mode_ethernet_mac_0_example_design_mod.v.patch.bak  tri_mode_ethernet_mac_0_fifo_block_mod.v.patch
device/rtl/src/ats/: connect_frame_length.v  connect_frame_length.v.bak  connect_timestamp.v  connect_timestamp.v.bak  detect_flow.v  detect_flow.v.bak  et_arbiter.v  et_deadline.v  et_gate.v  et_gate.v.bak  get_frame_length.v  gpio_processing_delay_max.v  process_frame.v  process_frame.v.bak  reference_timer.v  separate_timestamp.v  separate_timestamp.v.bak  set_timestamp.v  set_timestamp.v.bak
device/rtl/src/cbs/: add_tdest_from_vlan_tag.v  add_tdest_from_vlan_tag.v.bak  axis_stream_detector.v  channel_in_opt.v  credit_based_shaper.v  credit_based_shaper.v.bak  dest_to_user.v  ethernet_frame_arbiter.v  ethernet_frame_dropper.v  extract_output_side_ready.v  extract_output_side_ready.v.bak  pulse_generator.v  register_slice.v  user_to_dest.v
device/rtl/src/util/: axi4_lite_slave.v  axi4_lite_slave2.v  axi4_lite_slave_if.v  axi_gpio_parameters.v
device/rtl/test/: CMakeLists.txt  CMakeLists.txt.bak
device/rtl/test/ats/: CMakeLists.txt  CMakeLists.txt.bak  README.md  tb_connect_frame_length.v  tb_connect_timestamp.v  tb_connect_timestamp.v.bak  tb_detect_flow.v  tb_detect_flow.v.bak  tb_et_arbiter.v  tb_et_deadline.v  tb_et_gate.v  tb_get_frame_length.v  tb_get_frame_length.v.bak  tb_get_frame_length_and_timestamp.v  tb_process_frame.v  tb_reference_timer.v  tb_reference_timer.v.bak  tb_scheduler.v  tb_separate_frame_length.v  tb_separate_timestamp.v  tb_set_timestamp.v  tb_set_timestamp.v.bak
device/rtl/test/cbs/: CMakeLists.txt  README.md  tb_add_tdest_from_vlan_tag.v  tb_add_tdest_from_vlan_tag.v.bak  tb_channel_in_opt.v  tb_credit_based_shaper.v  tb_credit_based_shaper.v.bak  tb_ethernet_frame_arbiter.v  tb_ethernet_frame_arbiter.v.bak  tb_ethernet_frame_dropper.v  tb_ethernet_frame_dropper.v.bak  tb_pulse_generator.v
device/rtl/test/util/: CMakeLists.txt  compare_stream_with_pcap.v  compare_stream_with_pcap.v.bak  fatal.vh  pcap_to_stream.v  tb_axi4_lite_slave_if.sv
device/script/: CMakeLists.txt  generate_pcap.py
device/vivado/: CMakeLists.txt  README.md
device/vivado/ats-switch/: CMakeLists.txt  CMakeLists.txt.bak  README.md  README.md.bak  design_1.tcl  design_1_legacy.tcl  impl_strategy_zedboard.tcl  patch_for_zedboard.tcl
device/vivado/cbs-switch/: CMakeLists.txt  CMakeLists.txt.bak  README.md  README.md.bak  design_1.tcl  design_1.tcl.bak  patch_for_with_probes.tcl  patch_for_zedboard.tcl
device/vivado/common/: install_zedboard_board_file.tcl
(+2026 files in other folders)
